fixed text alignment of calendar header so that prev month is all the way left, month name is in the middle, and next month is all the way right

--- a/generators/reservation_calendar/templates/stylesheet.css
+++ b/generators/reservation_calendar/templates/stylesheet.css
@@ -31,12 +31,16 @@
 }
 
 .ec-month-name {
+  text-align:center;
   font-size: 16px;
   font-weight: bold;
 }
 
-.ec-month-nav {
-
+.prev-month-nav {
+  text-align:left;
+}
+.next-month-nav {
+  text-align:right;
 }
 
 /* Containers */
